--- a/Login page easy/css/index.css
+++ b/Login page easy/css/index.css
@@ -14,6 +14,11 @@ body{
   margin-left: -200px;
   position: absolute;
   background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow:  5px  5px 2px #f2f2f2,
+              -5px -5px 2px #f2f2f2,
+               5px -5px 2px #f2f2f2,
+              -5px  5px 2px #f2f2f2;
 }
 
 .image{
