--- a/Login page easy/css/index.css
+++ b/Login page easy/css/index.css
@@ -1,19 +1,20 @@
 body{
   background-color: #f7f7f7;
+  margin: 0;
+  padding: 0;
 }
 
-#logo{
+.container{
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card{
-  width: 400px;
-  left: 50%;
-  top: 10%;
-  margin-left: -200px;
-  position: absolute;
   background-color: #ffffff;
+  width: 400px;
   border-radius: 5px;
   box-shadow:  5px  5px 2px #f2f2f2,
               -5px -5px 2px #f2f2f2,
@@ -25,15 +26,17 @@ body{
   width: 150px;
   height: 150px;
   background-color: #f7f7f7;
-  margin: 0 auto;
-  margin-top: 10%;
   border-radius: 50%;
+  margin: 30px auto;
+}
+
+#logo{
+  width: 100%;
+  height: 100%;
 }
 
 .content{
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-bottom: 10%;
+  margin: 10px;
 }
 
 #email, #password, select {
